src/objects/echosign_dev1__SIGN_Toolbar_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>echosign_dev1__Cancel_Agreement__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Cancel Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Cancel_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel (Draft)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Delete_Agreement__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Delete Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Agreement_Review_Logo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Disable Agreement Review Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Bulk_Cancel_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Bulk Cancel Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Bulk_Delete_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Bulk Delete Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Bulk_Send_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Bulk Send Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Bulk_Send_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Bulk Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Bulk_Update_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Bulk Update Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_In_Flight_Host_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the &apos;Host Signing&apos; button for in-flight agreements.</description>
        <inlineHelpText>Enable this setting to hide the &apos;Host Signing&apos; button for in-flight agreements.</inlineHelpText>
        <label>Disable In Flight Host Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_On_Load_Action__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable On Load Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Host_Send_Agreement__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Host Send Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Save_Agreement__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Save Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Send_Agreement__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Send_Reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Update_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__View_Agreement__c</fullName>
        <defaultValue>true</defaultValue>
        <label>View Agreement</label>
        <type>Checkbox</type>
    </fields>
    <label>Adobe Sign Toolbar Settings</label>
</CustomObject>